k8s/auth-deployment.yml
# k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
spec:
  replicas: 2 # Le decimos a K8s que mantenga 2 copias de este servicio corriendo
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: nextflop-auth-service:latest # El nombre de la imagen Docker que creamos
          imagePullPolicy: IfNotPresent # Para que use la imagen local si existe
          ports:
            - containerPort: 3000 # El puerto interno en el que corre la aplicación
