k8s/billing-deployment.yml
# k8s/billing-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
        - name: billing-service
          image: nextflop-billing-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
