k8s/media-deployment.yml
# k8s/media-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - name: media-service
          image: nextflop-media-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
