k8s/subscriptions-deployment.yml
# k8s/subscriptions-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriptions-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: subscriptions-service
  template:
    metadata:
      labels:
        app: subscriptions-service
    spec:
      containers:
        - name: subscriptions-service
          image: nextflop-subscriptions-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
