k8s/auth-ingress.yml
# k8s/auth-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /profiles
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
